# test

./: CMakeLists.txt  Pull.sh  Push.sh  renew_git.sh
Example/Ncnn/: CMakeLists.txt  TestNcnn.cpp
Example/opencamera/: CMakeLists.txt  ReadMe  camera.cpp
Feture/: CMakeLists.txt  face_data_webcam.cpp
Test/: .test_utraFace.cpp.swp  CMakeLists.txt  build.sh  face_data_webcam.cpp  test_utraFace.cpp  train_model.cpp  train_model2.cpp
face/: CMakeLists.txt  facedetect.cpp
py/: test.py
reco/: CMakeLists.txt  build.sh  dnn_face_recognition_ex.cpp
test/: CMakeLists.txt  dnn_face_recognition_ex.cpp
